--- a/css/styles.css
+++ b/css/styles.css
@@ -54,9 +54,13 @@ a:hover {
 }
 
 .middle-container {
-  margin: 100px 0;
+  margin: 100px 10px;
 }
-
+.gaurav-img{
+  border-radius: 100%;
+  width: 25%;
+  height: 25%;
+}
 .bottom-container {
   background-color: #66BFBF;
   padding: 50px 0 20px;
