--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,10 @@ p {
   line-height: 2;
 }
 
+.navbar {
+  color: #40514E;
+}
+
 hr {
   border: dotted #EAF6F6 6px;
   border-bottom: none;
@@ -36,7 +40,7 @@ hr {
   margin: 100px auto;
 }
 
-a{
+a {
   color: #11999E;
   font-family: 'Montserrat', sans-serif;
   margin: 10px 20px;
@@ -56,11 +60,13 @@ a:hover {
 .middle-container {
   margin: 100px 10px;
 }
-.gaurav-img{
-  border-radius: 100%;
+
+.gaurav-img {
   width: 25%;
   height: 25%;
+  margin-bottom: 2%;
 }
+
 .bottom-container {
   background-color: #66BFBF;
   padding: 50px 0 20px;
@@ -110,7 +116,7 @@ a:hover {
   margin-right: 30px;
 }
 
-.chilli-img {
+.info-img {
   width: 25%;
   float: right;
   margin-left: 30px;
@@ -141,4 +147,31 @@ a:hover {
   background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
   background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
   text-decoration: none;
+}
+
+.logo {
+  width: 5%;
+  height: 5%;
+  text-align: left;
+}
+
+@media (max-width: 1024px) {
+  .top-container {
+    position: static;
+  }
+
+  .top-cloud {
+    position: static;
+    right: 300px;
+    top: 40px;
+  }
+  .bottom-cloud {
+    position: static;
+    left: 250px;
+    bottom: 300px;
+  }
+  .mountain{
+    width: 90%;
+    height: 0%;
+  }
 }
