--- a/css/styles.css
+++ b/css/styles.css
@@ -142,6 +142,7 @@ a:hover {
 @media (max-width: 1024px) {
   .top-container {
     position: static;
+    padding: 1em 0;
   }
 
   .top-cloud {
@@ -158,7 +159,17 @@ a:hover {
     width: 90%;
     height: 0%;
   }
+  .intro {
+    width: auto;
+  }
+  .skill-row{
+    width: auto%;
+  }
+  .contact-message {
+    width: auto;
+  }
 }
+
 
 
 .btn:hover {
